# Local-Coding-Tool

./: .dockerignore  .gitignore  AGENTS-v0.2.md  AGENTS-v0.3.md  AGENTS.md  CONTEXT.md  Dockerfile  README.md  main.py  opencode.json  pyproject.toml
docs/: Client-request.md  ai-proposals.md  artifact-budget-contract.md  assistant-usage-guide.md  changelog-template.md  context-pack-contract.md  issue-breakdown-review.md  issue-breakdown.md  js-ts-parser-fact-contract.md  known-limitations.md  mcp-tool-examples.md  opencode-mcp.example.jsonc  package-workspace-evidence-contract.md  release-checklist.md  release-readiness.md  repolens-implementation-plan.md  repolens-real-world-code-intelligence-roadmap.md  repolens-v0.1-decisions.md  repolens-v0.1-plan.md  repolens-v0.1-prd.md  repolens-v0.2-issue-breakdown-feedback.md  repolens-v0.2-issue-breakdown.md  repolens-v0.2-plan.md  repolens-v0.2-planning-interview-summary.md  repolens-v0.2-release-tracker.md  repolens-v0.3-issue-breakdown.md  repolens-v0.3-plan.md  repolens-v0.3-release-tracker.md  repolens-v0.3.1-ci-verification-plan.md  repolens-v0.3.1-issue-plan.md  repolens-v0.4-issue-feedback.md  repolens-v0.4-plan.md  repolens-v0.4-release-tracker.md  repolens-v0.4-review.md  repolens-v0.5-ci-plan.md  repolens-v0.5-release-tracker.md  repolens-v0.5-roadmap-recommendation.md  repolens-v0.6-issue-breakdown-feedback.md  repolens-v0.6-release-tracker.md  repolens-v0.7-python-semantic-analysis-recommendation.md  (+6 more)
tests/: mcp_stdio_support.py  packaged_mcp_smoke.py  synthetic_large_repo.py  test_ai_proposal.py  test_cli_index.py  (+27 more)
(+98 files in other folders)
