[build-system]
requires = ["hatchling>=1.26,<2"]
build-backend = "hatchling.build"

[project]
name = "repolens"
version = "0.1.0"
description = "Local-first repository intelligence backend for AI coding assistants."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.12,<2",
    "typer>=0.15,<1",
]

[project.scripts]
repolens = "repolens.cli:app"

[dependency-groups]
dev = [
    "mypy>=1.14,<2",
    "pytest>=8.3,<9",
    "ruff>=0.9,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/repolens"]

[tool.pytest.ini_options]
addopts = ["--strict-config", "--strict-markers"]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.ruff.format]
indent-style = "space"
line-ending = "lf"
quote-style = "double"

[tool.mypy]
check_untyped_defs = true
files = ["src/repolens"]
mypy_path = "src"
no_implicit_optional = true
python_version = "3.11"
warn_unused_configs = true
